[project]
name = "safety-dial"
version = "0.1.0"
description = "Reading and turning the safety dial: one linear direction that predicts and controls refusals in small LLMs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.6.0",
    "transformers==5.12.1",
    "accelerate",
    "anthropic>=0.40",
    "scikit-learn",
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "python-dotenv",
]

[project.optional-dependencies]
# 4-bit NF4 fallback for the 3B model on an 8GB card. bitsandbytes on Pascal is
# best-effort; install with `uv sync --extra quant` only if VRAM is tight.
quant = ["bitsandbytes"]

[project.scripts]
safety-dial = "safety_dial.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

# --- GTX 1070 is Pascal (sm_61): the cu124 wheel still ships sm_60 kernels that
# run on the card; cu128/cu130 dropped Pascal. Do not bump this index. ---
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safety_dial"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "W"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "gpu: requires a CUDA GPU and model weights (deselect with -m 'not gpu')",
    "api: requires ANTHROPIC_API_KEY and network (deselect with -m 'not api')",
]
